--- a/pom.xml
+++ b/pom.xml
@@ -4,72 +4,117 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.schm1tz1.kafka</groupId>
+    <groupId>io.github.schm1tz1.kafka</groupId>
     <artifactId>kafka-config-provider-env-var</artifactId>
-    <version>0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <licenses>
-        <license>
-            <name>The Apache License, Version 2.0</name>
-            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
-    <developers>
-        <developer>
-            <id>schm1tz1</id>
-            <name>Roman Schmitz</name>
-            <url>https://github.com/schm1tz1</url>
-            <roles>
-                <role>Committer</role>
-            </roles>
-        </developer>
-    </developers>
+    <version>0.1.0</version>
     <name>Kafka Env-Var Config Provider</name>
+    <description>Kafka Configuration Provider for environment variables as also provided for KIP-887</description>
+    <url>https://github.com/${project.github.repository}</url>
+    <inceptionYear>2023</inceptionYear>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.version>3.10.1</maven.compiler.version>
-        <maven.source.version>3.2.1</maven.source.version>
-        <maven.jar.version>3.2.0</maven.jar.version>
         <maven.assembly.version>3.4.2</maven.assembly.version>
         <maven.surefire.version>2.22.2</maven.surefire.version>
-        <kafka.version>3.3.1</kafka.version>
-        <slf4j.version>1.7.30</slf4j.version>
+        <kafka.version>3.4.0</kafka.version>
+        <slf4j.version>2.0.5</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
-        <json.version>20220924</json.version>
-        <picocli.version>4.6.3</picocli.version>
-        <junit.jupiter.version>5.9.1</junit.jupiter.version>
         <java.version>9</java.version>
+        <maven.compiler.version>3.10.1</maven.compiler.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.jar.version>3.2.0</maven.jar.version>
+        <maven.source.version>3.2.1</maven.source.version>
+        <maven.javadoc.version>3.4.1</maven.javadoc.version>
+        <maven.gpg.version>1.5</maven.gpg.version>
+        <nexus.maven.version>1.6.13</nexus.maven.version>
+        <gpg.keyname>0x0E3F1D60</gpg.keyname>
+        <project.github.repository>Schm1tz1/kafka-config-provider-env-var</project.github.repository>
+        <repository.url>git@github.com:${project.github.repository}.git</repository.url>
+        <junit.jupiter.version>5.9.2</junit.jupiter.version>
+        <nexus.url>https://s01.oss.sonatype.org</nexus.url>
     </properties>
+
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <id>Schm1tz1</id>
+            <name>Roman Schmitz</name>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:${repository.url}</connection>
+        <developerConnection>scm:git:${repository.url}</developerConnection>
+        <tag>HEAD</tag>
+        <url>${repository.url}</url>
+    </scm>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>${maven.jar.version}</version>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>${maven.source.version}</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven.compiler.version}</version>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                    <encoding>UTF-8</encoding>
-                </configuration>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>${maven.javadoc.version}</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven.surefire.version}</version>
-                <configuration>
-                    <skipTests>false</skipTests>
-                    <testFailureIgnore>true</testFailureIgnore><!-- FIXME -->
-                    <forkMode>once</forkMode>
-                    <reuseForks>true</reuseForks>
-            </configuration>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>${maven.gpg.version}</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                        <configuration>
+                            <keyname>${gpg.keyname}</keyname>
+                            <gpgArguments>
+                                <arg>--pinentry-mode</arg>
+                                <arg>loopback</arg>
+                            </gpgArguments>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
